# ls_digital_level

./: LS15.bat  LS15_bluetooth.py  README.md  pyproject.toml  requirements.txt  working_notes.md
